# monado-ems

./: CMakeLists.txt  build.gradle  download_gst.sh  libraries_static.cmake  settings.gradle
ems/: CMakeLists.txt  ems_compositor.cpp  ems_hmd.cpp  ems_instance.cpp
gstreamer_android/: CMakeLists.txt  gstreamer_android.c
gstreamer_java/: build.gradle
src/xrt/auxiliary/gstreamer/: CMakeLists.txt
src/xrt/auxiliary/vk/: vk_image_readback_to_xf_pool.c
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/android/: android_sensors.c
src/xrt/drivers/ems/: CMakeLists.txt  ems_compositor.cpp  ems_hmd.cpp  ems_motion_controller.cpp  ems_server_internal.h  ems_server_main.cpp
src/xrt/drivers/ems/gst/: ems_gstreamer_pipeline.c
src/xrt/targets/: CMakeLists.txt
src/xrt/targets/android_common/: build.gradle
src/xrt/targets/common/: CMakeLists.txt
src/xrt/targets/ems/: CMakeLists.txt  ems_callbacks.cpp  ems_callbacks.h  ems_compositor.cpp  ems_compositor.h  ems_hmd.cpp  ems_instance.cpp  ems_motion_controller.cpp  ems_server_internal.h
src/xrt/targets/ems/gst/: CMakeLists.txt  ems_gstreamer_pipeline.c  ems_gstreamer_pipeline.h  ems_signaling_server.c  ems_signaling_server.h
src/xrt/targets/ems/proto/: CMakeLists.txt  electricmaple.proto
src/xrt/targets/openxr_android/: build.gradle
src/xrt/targets/service-lib/: CMakeLists.txt
